@@ -266,7 +266,7 @@ public:
 	void add_trait(std::string /*trait*/);
 	void generate_traits(bool musthaveonly=false, game_state* state = 0);
 	void generate_traits_description();
-	std::string generate_description( game_state* state = 0) const 
+	std::string generate_name( game_state* state = 0) const 
 		{ return race_->generate_name(string_gender(cfg_["gender"]), state); }
 
 	// Only see_all=true use caching
